NginxDemo/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      containers:
      - name: backend-app
        image: jhinwei1228/backendapp:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend-app  
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: backend-app
