NginxDemo/payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-app  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-app
  template:
    metadata:
      labels:
        app: payment-app
    spec:
      containers:
      - name: payment-app
        image: jhinwei1228/paymentapp:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: payment-app  
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: payment-app
